# sudoku-solver

./: .gitignore  README.md  generate.py  pyproject.toml  sudoku.txt
inputs/: graph-100-500.txt  graph-1000-100000.txt  graph-1000-50000.txt  graph-50-500.txt  graph-500-1000.txt  sample.txt  sample2.txt  small.txt
src/: degree.py  generate.py  main.cc  main.py
