[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "Super Graph Coloring"
authors = ["John Naylor <jonaylor89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
